// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createComposeObjFromComposeFile multiple Compose Files should create composeObj from multiple Compose Files 1`] = `
Object {
  "services": Object {
    "composePostgres": Object {
      "environment": Object {
        "POSTGRES_DB": "nobueno",
        "POSTGRES_PASSWORD": "is",
        "POSTGRES_USER": "ramda",
      },
      "image": "postgres:9.6",
      "ports": Array [
        Object {
          "published": 5433,
          "target": 5432,
        },
      ],
    },
    "composeRedis": Object {
      "image": "redis:5.0.3",
      "ports": Array [
        Object {
          "published": 6378,
          "target": 6379,
        },
      ],
    },
  },
  "version": "3.7",
}
`;

exports[`createComposeObjFromComposeFile multiple Compose Files should merge conflicting names 1`] = `
Object {
  "services": Object {
    "composeRedis": Object {
      "image": "im:a:duplicate",
      "ports": Array [
        Object {
          "published": 6378,
          "target": 6379,
        },
      ],
    },
  },
  "version": "3.7",
}
`;

exports[`createComposeObjFromComposeFile should create composeObj from complicated Compose File 1`] = `
Object {
  "services": Object {
    "dockest_inline_service_name_postgres1sequelizeRunner": Object {
      "environment": Object {
        "POSTGRES_DB": "nobueno",
        "POSTGRES_PASSWORD": "is",
        "POSTGRES_USER": "ramda",
      },
      "image": "postgres:9.6",
      "ports": Array [
        Object {
          "published": 5433,
          "target": 5432,
        },
      ],
    },
    "dockest_kafka1confluentinc": Object {
      "depends_on": Array [
        "dockest_zookeeper1confluentinc",
      ],
      "environment": Object {
        "KAFKA_ADVERTISED_LISTENERS": "PLAINTEXT://dockest_kafka1confluentinc:29092,PLAINTEXT_HOST://localhost:9092",
        "KAFKA_AUTO_CREATE_TOPICS_ENABLE": "true",
        "KAFKA_BROKER_ID": 1,
        "KAFKA_LISTENER_SECURITY_PROTOCOL_MAP": "PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT",
        "KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR": 1,
        "KAFKA_ZOOKEEPER_CONNECT": "dockest_zookeeper1confluentinc:2181",
      },
      "image": "confluentinc/cp-kafka:5.2.2",
      "ports": Array [
        Object {
          "published": 9092,
          "target": 9092,
        },
      ],
    },
    "dockest_postgres2knex": Object {
      "environment": Object {
        "POSTGRES_DB": "nobueno",
        "POSTGRES_PASSWORD": "is",
        "POSTGRES_USER": "ramda",
      },
      "image": "postgres:9.6",
      "ports": Array [
        Object {
          "published": 5434,
          "target": 5432,
        },
      ],
    },
    "dockest_redis1ioredis": Object {
      "image": "redis:5.0.3",
      "ports": Array [
        Object {
          "published": 6378,
          "target": 6379,
        },
      ],
    },
    "dockest_zookeeper1confluentinc": Object {
      "environment": Object {
        "ZOOKEEPER_CLIENT_PORT": "2181",
      },
      "image": "confluentinc/cp-zookeeper:5.2.2",
      "ports": Array [
        Object {
          "published": 2181,
          "target": 2181,
        },
      ],
    },
  },
  "version": "3.7",
}
`;

exports[`createComposeObjFromComposeFile should create composeObj from single service Compose File 1`] = `
Object {
  "services": Object {
    "composeRedis": Object {
      "image": "redis:5.0.3",
      "ports": Array [
        Object {
          "published": 6378,
          "target": 6379,
        },
      ],
    },
  },
  "version": "3.7",
}
`;
